--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <!-- Noto Sans 폰트 링크 -->
-  <title>React App</title>
+  <title>마루바람</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
